# report-compiler

./: .gitignore  BUILD.md  DEVELOPER_GUIDE.md  MANIFEST.in  README.md  REFACTOR_SUMMARY.md  TODO.md  WORD_INTEGRATION.md  build.ps1  compile_report.bat  creative_template.tex  debug_compiler.py  insert_pdf.lua  main.py  main_refactored.py  modern_template.tex  parsons.tex  pyproject.toml  report_compiler.py  report_compiler.spec  report_compiler_poc.py  requirements-build.txt  requirements.txt  run_tests.py  template.tex  test_comprehensive_workflow.py  test_deps.py  test_direct.py  test_image_feature.py  test_image_processing.py  test_image_validation.py  test_import.py  test_simple.bat
.devcontainer/: devcontainer.json
.github/workflows/: pr-dev-build.yml  pypi-publish.yml
docs/images/: README.md
docs/superpowers/specs/: 2026-06-24-in-document-overlay-preview-design.md  2026-06-24-link-manager-design.md
examples/: Master Report.docx
examples/parsons-report/: parsons-report.docx
examples/simple-report/: bridge_report.docx  bridge_report_processed.md  bridge_report_temp.md  ~$idge_report.docx
report_compiler/: __init__.py
report_compiler/core/: compiler.py  compiler_new.py  compiler_old.py  compiler_test.py  config.py
report_compiler/document/: docx_processor.py  libreoffice_converter.py  placeholder_parser.py  word_converter.py
report_compiler/pdf/: content_analyzer.py  marker_remover.py  merge_processor.py  overlay_processor.py
report_compiler/utils/: file_manager.py  logging_config.py  validators.py
src/report_compiler/: _version.py  cli.py  com_server.py  interactive_menu.py
src/report_compiler/core/: compiler.py  config.py
src/report_compiler/document/: docx_processor.py  libreoffice_converter.py  link_index.py  overlay_preview.py  placeholder_parser.py  word_converter.py
src/report_compiler/gui/: __init__.py  __main__.py  (+5 more)
tests/: __init__.py  test_config.py  test_file_manager.py  test_integration.py  test_libreoffice_converter.py  test_page_selector.py  test_placeholder_parser.py  test_validators.py
word_integration/: ReportCompilerTemplate.dotm  ReportingTools.bas  report_compiler_UI.xml
word_integration/skeleton/: [Content_Types].xml
(+25 files in other folders)
