[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "report_compiler"
version = "0.1.0"
authors = [
  { name="YOUR NAME", email="your@email.com" },
]
description = "A tool for compiling reports from various sources."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "comtypes>=1.2.1",
    "Pillow>=10.2.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.23.26",
    "pywin32; sys_platform == 'win32'"
]

[project.scripts]
report-compiler = "report_compiler.cli:main"
