[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "report-compiler"
dynamic = ["version"]
authors = [
  { name="YOUR NAME", email="your@email.com" },
]
description = "A tool for compiling reports from various sources."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "comtypes>=1.2.1",
    "Pillow>=10.2.0",
    "python-docx>=1.2.0",
    "PyMuPDF>=1.26.3",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pywin32; sys_platform == 'win32'",
    "questionary>=2.0.1",
    "PySide6>=6.6",
]

[project.scripts]
report-compiler = "report_compiler.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# Ship the Word-integration sources (the .dotm/vbaProject.bin are git-ignored build
# artifacts and are built on demand). This lets `word-integration install` work from a
# PyPI install, not just a source checkout.
[tool.setuptools.package-data]
report_compiler = [
    "word_integration/*.bas",
    "word_integration/*.xml",
    "word_integration/icons/*",
    "word_integration/skeleton/**/*",
    "word_integration/seed.dotm",
]

[tool.setuptools_scm]
write_to = "src/report_compiler/_version.py"
